- [Feature] Unsecure connection warning when password is transmitted in plaintext
- [Feature] Alert to change connection to TLS if server supports AUTH TLS (FTP)
- [Feature] Edit metadata for multiple files (S3, Google Storage)
- [Feature] Menu items to copy CDN, signed & authenticated URLs to clipboard or open in Web Browser. (S3, Cloud Files, Google Storage)
- [Bugfix] Improved interoperability with Eucalyptus Walrus (S3)
- [Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)
- [Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (#2443)
- [Bugfix] Drag and drop of a file over a bookmark to upload (#4562)
- [Bugfix] Connect authenticated to thirdparty buckets (S3) (#4480)
- [Bugfix] Connections stalls after long idle (SFTP) (#5073, #4214, #3941)
- [Bugfix] Dragging files for upload is slow (#4141)

3.5.1 (Jun-15-2010) [http://trac.cyberduck.ch/milestone/3.5.1]
- [Bugfix] Crash opening Info window (#4536)
- [Bugfix] Nested folder not visible (#4534) (Google Docs)
- [Bugfix] Upload into folder not possible (#4550) (Google Docs)
- [Bugfix] Downloading spreadsheets fails with permission error (#4538) (Google Docs)
- [Feature] Replacing documents on upload adding new revision (Google Docs)

3.5 (Jun-09-2010) [http://trac.cyberduck.ch/milestone/3.5]
- [Localize] Slovenian Localization
- [Localize] Romanian Localization
- [Feature] Connecting to Google Docs (Google Docs)
- [Feature] Convert uploads to Google Docs format (Google Docs)
- [Feature] Download format preferences for documents (Google Docs)
- [Feature] Optical Character Recognition (OCR) for image uploads (Google Docs)
- [Feature] Support for Asia Pacific (Singapore) location (S3)
- [Feature] Support for keyboard-interactive authentiation using SecurID (#4459) (SFTP)
- [Feature] HTTP plain text connection support to connect to third party S3 servers (#4181) (S3)
- [Feature] Custom metadata attributes (#4063) (S3, Rackspace Cloud Files)