@@ -59,6 +59,7 @@
         <li>[Feature] Menu items to copy CDN, signed & authenticated URLs to clipboard or open in Web Browser. (S3,
             Cloud Files, Google Storage)
         </li>
+        <li>[Feature] Move and rename files and folders (Google Docs)</li>
         <li>[Bugfix] Improved interoperability with Eucalyptus Walrus (S3)</li>
         <li>[Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)</li>
         <li>[Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (
