@@ -26,6 +26,7 @@ Changelog. Last modified: $Date$
 - [Feature] Alert to change connection to TLS if server supports AUTH TLS (FTP)
 - [Feature] Edit metadata for multiple files (S3, Google Storage)
 - [Feature] Menu items to copy CDN, signed & authenticated URLs to clipboard or open in Web Browser. (S3, Cloud Files, Google Storage)
+- [Feature] Move and rename files and folders (Google Docs)
 - [Bugfix] Improved interoperability with Eucalyptus Walrus (S3)
 - [Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)
 - [Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (#2443)
